feat: Add feature to indicate active section
For small screen, an additional element is added to show the name to active section been viewed while for larger screen the nav element of the active section is styled differently

--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
 
 /* Media queries import */
 
+@import 'media/xsmall-screen.css' screen and (min-width: 420px);
 @import 'media/small-screen.css' screen and (min-width: 576px);
 @import 'media/medium-screen.css' screen and (min-width: 798px);
 @import 'media/large-screen.css' screen and (min-width: 992px);
